Closed Bug 1403100 Opened 7 years ago Closed 7 years ago

Compilation error on xpcom/io/SpecialSystemDirectory.cpp on OS X 10.13

Categories

(Core :: XPCOM, defect)

55 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: jya, Assigned: jya)

Details

Attachments

(1 file)

On OS X 10.13 latest xcode and command line tools:

 3:06.65 In file included from /Users/jyavenard/Work/Mozilla/mozilla-central/xpcom/io/SpecialSystemDirectory.cpp   Compiling core-foundation-sys v0.:73.1:
 3:06.65 
 3:06.65 In file included from /Users/jyavenard/Work/Mozilla/mozilla-central/xpcom/io/SpecialSystemDirectory.h:14:
 3:06.65 In file included from /System/Library/Frameworks/Carbon.framework/Headers/Carbon.h:20:
 3:06.65 In file included from /System/Library/Frameworks/CoreServices.framework/Headers/CoreServices.h:39:
 3:06.65 In file included from /System/Library/Frameworks/CoreServices.framework/Frameworks/LaunchServices.framework/Headers/LaunchServices.h:22:
 3:06.65 In file included from /System/Library/Frameworks/CoreServices.framework/Frameworks/LaunchServices.framework/Headers/IconsCore.h:23:
 3:06.65 In file included from /System/Library/Frameworks/CoreServices.framework/Frameworks/OSServices.framework/Headers/OSServices.h:27:
 3:06.65 In file included from /System/Library/Frameworks/CoreServices.framework/Frameworks/OSServices.framework/Headers/CSIdentity.h:43:
 3:06.65 In file included from /System/Library/Frameworks/Security.framework/Headers/Security.h:32:
 3:06.65 /System/Library/Frameworks/Security.framework/Headers/SecKey.h:1261:36: error: expected ';' after top level declarator
 3:06.65 typedef CFStringRef SecKeyAlgorithm CF_STRING_ENUM
 3:06.65                                    ^
 3:06.65 /System/Library/Frameworks/Security.framework/Headers/SecKey.h:1504:47: error: expected ';' after top level declarator
 3:06.65 typedef CFStringRef SecKeyKeyExchangeParameter CF_STRING_ENUM
 3:06.65                                               ^
 3:06.79 BUILDSTATUS OBJECT_FILE uregex.o
 3:06.93 In file included from /Users/jyavenard/Work/Mozilla/obj-ff-dbg/xpcom/io/Unified_cpp_xpcom_io0.cpp:56:
 3:06.93 In file included from /Users/jyavenard/Work/Mozilla/mozilla-central/xpcom/io/SpecialSystemDirectory.cpp:7:
 3:06.93 In file included from /Users/jyavenard/Work/Mozilla/mozilla-central/xpcom/io/SpecialSystemDirectory.h:14:
 3:06.93 In file included from /System/Library/Frameworks/Carbon.framework/Headers/Carbon.h:24:
 3:06.93 In file included from /System/Library/Frameworks/ApplicationServices.framework/Headers/ApplicationServices.h:35:
 3:06.93 In file included from /System/Library/Frameworks/CoreGraphics.framework/Headers/CoreGraphics.h:11:
 3:06.93 In file included from /System/Library/Frameworks/CoreGraphics.framework/Headers/CGBitmapContext.h:9:
 3:06.94 In file included from /System/Library/Frameworks/CoreGraphics.framework/Headers/CGContext.h:21:
 3:06.94 /System/Library/Frameworks/CoreGraphics.framework/Headers/CGPath.h:393:82: error: expected ')'
 3:06.94 CG_EXTERN void CGPathApplyWithBlock(CGPathRef path, CGPathApplyBlock CF_NOESCAPE block)
 3:06.94                                                                                  ^
 3:06.94 /System/Library/Frameworks/CoreGraphics.framework/Headers/CGPath.h:393:36: note: to match this '('
 3:06.94 CG_EXTERN void CGPathApplyWithBlock(CGPathRef path, CGPathApplyBlock CF_NOESCAPE block)
 3:06.94                                    ^
 3:07.02 BUILDSTATUS OBJECT_FILE pkixocsp_VerifyEncodedOCSPResponse.o
 3:08.10 In file included from /Users/jyavenard/Work/Mozilla/obj-ff-dbg/xpcom/base/Unified_mm_xpcom_base0.mm:2:
 3:08.10 In file included from /Users/jyavenard/Work/Mozilla/mozilla-central/xpcom/base/MacHelpers.mm:9:
 3:08.10 In file included from /Users/jyavenard/Work/Mozilla/mozilla-central/xpcom/base/nsObjCExceptions.h:14:
 3:08.10 In file included from /System/Library/Frameworks/Foundation.framework/Headers/Foundation.h:80:
 3:08.10 In file included from /System/Library/Frameworks/Foundation.framework/Headers/NSURLCredential.h:9:
 3:08.10 In file included from /System/Library/Frameworks/Security.framework/Headers/Security.h:32:
 3:08.10 /System/Library/Frameworks/Security.framework/Headers/SecKey.h:1261:36: error: expected ';' after top level declarator
 3:08.10 typedef CFStringRef SecKeyAlgorithm CF_STRING_ENUM
 3:08.10                                    ^
 3:08.10 /System/Library/Frameworks/Security.framework/Headers/SecKey.h:1504:47: error: expected ';' after top level declarator
 3:08.10 typedef CFStringRef SecKeyKeyExchangeParameter CF_STRING_ENUM
 3:08.10                                               ^
 3:08.10 3 errors generated.
 3:08.12 make[5]: *** [Unified_cpp_xpcom_io0.o] Error 1
Assignee: nobody → jyavenard
Comment on attachment 8912160 [details]
Bug 1403100 - Fix compilation on High Sierra (10.13).

https://reviewboard.mozilla.org/r/183542/#review188786

Thanks!
Attachment #8912160 - Flags: review?(nfroyd) → review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/59596c38ba70
Fix compilation on High Sierra (10.13). r=froydnj
https://hg.mozilla.org/mozilla-central/rev/59596c38ba70
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
How do you know the weird build error is related to the header file that we can remove to fix this?

Doesn't removing header effect the old version <10.13?

Thanks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: