Bug 1403100 - Fix compilation on High Sierra (10.13). r=froydnj

MozReview-Commit-ID: B3B2YeUTlAz